--- a/JS_Logical Assignments/Assignent_2.html
+++ b/JS_Logical Assignments/Assignent_2.html
@@ -14,7 +14,7 @@
             
             document.write("The number is : " + num);
             document.write("<br>");
-            document.write("The numbers divisible by 3 or 5 are : ");
+            document.write("The numbers Multiple of 3 or 5 are : ");
             
             for(var i=1; i<=num; i++)
             {
